Updated get strength to use member level

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ rChallenge380/worksheet2.py
 rChallenge381/rolls.csv
 rChallenge381/worksheet.py
 rChallenge383/worksheet.py
+Gangs/classes/__pycache__/__init__.cpython-37.pyc
+Gangs/classes/__pycache__/gang.cpython-37.pyc
+Gangs/classes/__pycache__/member.cpython-37.pyc
