Work on how gangs activate

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@ rChallenge383/worksheet.py
 Gangs/classes/__pycache__/__init__.cpython-37.pyc
 Gangs/classes/__pycache__/gang.cpython-37.pyc
 Gangs/classes/__pycache__/member.cpython-37.pyc
+.vscode/settings.json
+Gangs/classes/__pycache__/asset.cpython-37.pyc
+Gangs/classes/__pycache__/gang.cpython-37.pyc
+Gangs/classes/__pycache__/member.cpython-37.pyc
+Gangs/classes/__pycache__/racket.cpython-37.pyc
