--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\reece\\Anaconda3\\python.exe"
+    "python.pythonPath": "F:\\Users\\jackrdfcrozier\\miniconda3\\python.exe"
 }
